# parts

./: .gitignore
aws/aws/dynamodb/: kvs.py
aws/aws/lambdaurl/: __init__.py  auth.py  bottle_router.py  lambda_url.py
aws/aws/utils/: utils.py
aws/aws_old/: __init__.py  lambdaAPI.py  request.py  utils.py
bottle/: app.py
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  hello.cpp
cpp/test/: CMakeLists.txt  main.cpp
eel/: app.py  app1.py  setup.bat  setup.command  start.command
eel/tools/: askdir.py  setup.py
electron/: index.html  package-lock.json  tsconfig.json  vite.config.ts
electron/main/: build.mjs  ipc.ts  main.ts  preload.ts  tsconfig.json
electron/src/: App.tsx  Common.ts  main.tsx
gluon/: index copy.html  index.html  index.js  package-lock.json  start.vbs
s3/: s3.html
socket/: CMakeLists.txt
socket/cui/: client.mjs  echo.py
socket/src/: good_morning.cpp
socket/test/: call.js  client  client.cpp  main.cpp  send.js  server  server.cpp
solidjs/: .prettierrc  README.md  setup.sh
solidjs/src/: App.tsx
tauri/: package-lock.json
tauri/src/: App.tsx  Common.ts  Style.tsx  index.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs  utils.rs
ubuntu/: docker-compose.yml  setup.sh
webrtc/: master.html  package-lock.json  server.py  viewer.html
